src/test/ui/issues/issue-5XXXX/issue-50264-inner-deref-trait/result-as_deref_mut.rs
fn main() {
    let _result = &mut Ok(42).as_deref_mut();
//~^ ERROR the method
}
